# OrchestraTerm

./: Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
scripts/: generate-icon.swift  release-macos.sh  verify-release.sh
src/: compat.rs  core.rs  engine.rs  gui.rs  keymap.rs  lib.rs  main.rs  protocol.rs  server.rs  terminal.rs
