[package]
name = "orchestraterm"
version = "0.2.0"
edition = "2024"
authors = ["OrchestraTerm Contributors"]
description = "Declarative GUI orchestration terminal with tmux-like core"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
eframe = "0.33"
egui = "0.33"
portable-pty = "0.9"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vt100 = "0.15"

[dev-dependencies]
pretty_assertions = "1"
